Fix hamburger offscreen issue and grants process image on mobile

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -142,3 +142,15 @@ html {
 #md-content strong {
   @apply pb-6 font-roboto text-textColor text-base md:text-heroTextMobile md:leading-thirtyThree font-highlighted font-bold underline;
 }
+
+@media (max-width: 400px) {
+  .mobile-logo-width {
+    width: 50%;
+  }
+}
+
+@media (max-width: 600px) {
+  #md-content p img {
+    max-width: 100%;
+  }
+}
